[package]
name = "rahul_crate"
version = "0.1.0"
authors = ["rahul"]
edition = "2021"
description = "A library for modeling artistic concepts."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
